manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "clockaks01-c20b"
spec:
  selector:
      matchLabels:
        app: "clockaks01-c20b"
  replicas: 2
  template:
      metadata:
        labels:
            app: "clockaks01-c20b"
      spec:
        containers:
        - name: "clockaks01-c20b"
          image: "clockacr01.azurecr.io/clockaks01"
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 8080
              path: /
          livenessProbe:
            httpGet:
              port: 8080
              path: /
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
