manifests/service-3.yml
apiVersion: v1
kind: Service
metadata:
    name: "clockaks01-c20b"
    labels:
        app: "clockaks01-c20b"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "clockaks01-c20b"
