manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: "clockaks01-c20b"
  labels:
      app: "clockaks01-c20b"
spec:
  type: LoadBalancer
  selector:
    app: "clockaks01-c20b"
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
