manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: "clockaks01-c20b"
    labels:
        app: "clockaks01-c20b"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: clockaks018cce-clockaks01-c20b.8082e0d5a7444b9fb0c1.australiaeast.aksapp.io
          http:
            paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: "clockaks01-c20b"
                  port: 
                    number: 8080
